# Todo-App

./: .gitignore  README.md  analyse.md  dev-server.cjs  generate-icons.py  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  reminder.rs  session.rs  tray.rs
src/js/: app.js  dropdown.js  interactions.js  tree.js
src/styles/: main.css
