[package]
name = "todo-app"
version = "1.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "todo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
